--- a/IntroductionToPython/00-Preliminaries.ipynb
+++ b/IntroductionToPython/00-Preliminaries.ipynb
@@ -90,7 +90,13 @@
     "The third line uses the current Python interpreter for the specific environment in which this Jupyter notebook executes.  The line then uses the `pip` module to install the latest version of the packages listed in the requirements.txt file.  (Programmers can also run `pip` as a command-line program.)  `pip` will install any dependencies required by those packages - so the output contains references to pandas, beautifulsoup4, soupsieve, and other libraries.\n",
     "\n",
     "For those familiar with Python, you may ask why not just execute `!pip install google`.  The short answer is that if the Python interpreter runs within a different virtual environment than the Jupyter server, pip will install the dependency in the wrong location. For more information, Jake VanderPlas describes this on [his blog in much greater detail](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/). In addition,\n",
-    "Jake VanderPlas has written an excellent book - _Python Data Science Handbook, 2nd Ed_ [O'Reilly](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/) [Amazon](https://www.amazon.com/Python-Data-Science-Handbook-Essential-ebook/dp/B01N2JT3ST), which you may want to examine."
+    "Jake VanderPlas has written an excellent book - _Python Data Science Handbook, 2nd Ed_ [O'Reilly](https://jakevdp.github.io/blog/2017/12/05/installing-python-packages-from-jupyter/) [Amazon](https://www.amazon.com/Python-Data-Science-Handbook-Essential-ebook/dp/B01N2JT3ST), which you may want to examine.\n",
+    "\n",
+    "As alternates for the pip install, either of these alternatives should work as well:\n",
+    "\n",
+    "`%pip install -r ../requirements.txt`\n",
+    "\n",
+    "`pip install -r ../requirements.txt`"
    ]
   },
   {
