--- a/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
+++ b/IntroductionToPython/03-Boolean,Numbers,Operations.ipynb
@@ -317,7 +317,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fb555213",
    "metadata": {},
@@ -662,7 +661,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9218d4c0",
    "metadata": {},
@@ -1003,8 +1001,8 @@
    "source": [
     "## Exercises\n",
     "1. Write python code to convert 100 degrees Celsius to Fahrenheit.\n",
-    "2. An internet coffee shop sells coffee for \\\\$12.85 per pound.  The shipping cost is \\\\$3.25 per pound \n",
-    "  plus a flat handling fee of \\\\$2.50 per order.  Using a variable named `coffee_lbs`, write a python statement \n",
+    "2. An internet coffee shop sells coffee for $\\$$12.85 per pound.  The shipping cost is $\\$3$.25 per pound \n",
+    "  plus a flat handling fee of $\\$$2.50 per order.  Using a variable named `coffee_lbs`, write a python statement \n",
     "  that will compute the order cost and assign the value to a variable named `cost`.  Then print that variable to the console.\n",
     "3. Find the formula for [periodic compounding](https://en.wikipedia.org/wiki/Compound_interest#Periodic_compounding). Write a snippet of python code that you can use to set the variables to apply the compounding formula.  The code will be similar to the Fahrenheit conversion above, with a few more variables.  You should have the following variables with P, r, n, and t where \n",
     "    - A is the final amount\n",
