--- a/IntroductionToPython/10-Tuples.ipynb
+++ b/IntroductionToPython/10-Tuples.ipynb
@@ -114,7 +114,7 @@
    "id": "afdc4a1e",
    "metadata": {},
    "source": [
-    "# Combining Tuples `+`"
+    "## Combining Tuples `+`"
    ]
   },
   {
