--- a/IntroductionToPython/11-Iteration.ipynb
+++ b/IntroductionToPython/11-Iteration.ipynb
@@ -815,7 +815,7 @@
    "id": "c4529c2e",
    "metadata": {},
    "source": [
-    "We will get many different answers as we run the above cell multiple times. Some will be larger than the \\\\$121,000 we computed before, and other results smaller. So we cannot just take the number we like the best.\n",
+    "We will get many different answers as we run the above cell multiple times. Some will be larger than the $\\$$121,000 we computed before, and other results smaller. We cannot just take the number we like the best.\n",
     "\n",
     "So to properly perform this simulation, we repeat this experiment thousands of times and then analyze the results."
    ]
