--- a/IntroductionToPython/16-JSON.ipynb
+++ b/IntroductionToPython/16-JSON.ipynb
@@ -296,7 +296,7 @@
     "</pre>\n",
     "Hints:\n",
     "You must recursively traverse the JSON structure (the dictionary with Python) to figure out the columns.\n",
-    "Then using those columns, recursive access data elements.  You can test for types is <code>type(<i>var_name</i>) is <i>type_name</i>."
+    "Then using those columns, recursive access data elements.  You can test for types with <code>type(<i>var_name</i>) is <i>type_name</i></code>."
    ]
   },
   {
