--- a/IntroductionToPython/19-SoftwareDevelopmentProcess.ipynb
+++ b/IntroductionToPython/19-SoftwareDevelopmentProcess.ipynb
@@ -56,7 +56,7 @@
     "- _Finite_: Even the simplest of programs can have so many input values that exhaustive testing is infeasible. As such, we can only perform testing on a subset of the possible tests.\n",
     "- _Selected_: Selecting different test cases can have different levels of effectiveness. As such, we must seek to create the correct set of test cases to evaluate our programs effectively (minimize time and effort). \n",
     "\n",
-    "In the next notebook, we will start to examine how we can find and fix code issues.\n",
+    "Defects will occur in software systems.  Our goal is to both minimize their occurences and reduce the time between when they appear and then subsequently discovered. \n",
     "\n",
     "![](images/faultProgression.png)\n",
     "\n",
