--- a/IntroductionToPython/00-Preliminaries.ipynb
+++ b/IntroductionToPython/00-Preliminaries.ipynb
@@ -61,7 +61,9 @@
    "metadata": {},
    "source": [
     "## Install Dependencies\n",
-    "To ensure your Python environment has the required dependencies installed for these notebooks, execute the following cell."
+    "To ensure your Python environment has the required dependencies installed for these notebooks, execute the following cell.\n",
+    "\n",
+    "Note: These commands are not necessary if you are using Google Colaboratory."
    ]
   },
   {
@@ -73,7 +75,7 @@
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install --upgrade pip setuptools wheel\n",
-    "!{sys.executable} -m pip install -r ../requirements.txt"
+    "!{sys.executable} -m pip install -r requirements.txt"
    ]
   },
   {
