--- a/IntroductionToPython/01-Introduction.ipynb
+++ b/IntroductionToPython/01-Introduction.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "The following notebook presents an approach to solving problems with programming.  The fundamental principle is understanding what occurs and how we can translate that into a series of steps.  And most importantly, plan how to implement that approach before you write any code. Once we have those steps, we can then write code.  As you perform this process, you should have a paper handy to take notes and record your thoughts.\n",
     "\n",
-    "To start our journey to learn computer programming through Python, this notebook contains three separate programs to demonstrate some of the capabilities of computer programs and some fundamental concepts within computer science. As these are some of the first Python programs you might have seen, we provide detailed explanations."
+    "To start our journey to learn computer programming through Python, this notebook contains three separate programs to demonstrate some of the capabilities of computer programs and some fundamental concepts within computer science. As these are some of the first Python programs you might have seen, we provide detailed explanations. We do not expect that you will now be able to write equivalent programs."
    ]
   },
   {
@@ -37,20 +37,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a8f0d274-4c3e-4403-bdf8-5e03da7cf508",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's find an old website.\n",
+      "Type a website URL: http://irishwildcat.com\n",
+      "Type a year, month, and day, like 20140410: 20140410\n",
+      "Found this copy:  http://web.archive.org/web/20140317220451/http://irishwildcat.com:80/\n",
+      "It should appear in your browser now.\n"
+     ]
+    }
+   ],
    "source": [
     "import webbrowser\n",
     "import json\n",
-    "from urllib.request import urlopen\n",
+    "from urllib import request \n",
     "    \n",
     "print(\"Let's find an old website.\")\n",
     "site = input(\"Type a website URL: \")\n",
     "era = input(\"Type a year, month, and day, like 20140410: \")\n",
     "url = \"http://archive.org/wayback/available?url=%s&timestamp=%s\" % (site, era)\n",
-    "response = urlopen(url)\n",
+    "response = request.urlopen(url)\n",
     "contents = response.read()\n",
     "data = json.loads(contents)\n",
     "try:\n",
@@ -72,19 +84,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc8edee7",
+   "id": "4d426c5a",
    "metadata": {},
    "source": [
     "While you may be new to programming, hopefully you can see how the previous code block worked.\n",
+    "\n",
+    "A few general notes:\n",
+    "1. This code makes substantial use of existing modules and functions.  `webbrowser`, `json`, and `urllib` are modules - collection of code others have written that we can use in our code. One of the benefits of most programming languages is the libraries - both delivered as part of the programming platform (aka, \"standard libraries\") as well as those that others have written.  These libraries abstract many of the tasks to perform specific functionality and make doing those tasks much simpler than if we had to entirely write the system.\n",
+    "2. Statements that look like _name_(_value_) are  function calls.  These function calls allow us to access code that has been previously written and performs a certain task.  \n",
+    "3. Statements that look like _name_._name_(_value_) are also function calls, but these functions belong to modules."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc8edee7",
+   "metadata": {},
+   "source": [
     "<br>Note: If you need to see line numbers, refer to the previous notebook for instructions to enable them.\n",
     "\n",
     "* Lines 1 and 2 let the program use the `webbrowser` and `json` libraries.  The `webbrowser` library allows the program to open a new browser window with a URL (line 16).  [JSON](https://www.json.org/) has become one of the standards for exchanging data through internet-based APIs. The course will cover JSON in more detail in later notebooks. The `json` library provides code to parse the JSON data format.\n",
-    "* Line 3 allows us to use the `urlopen()` method from the `urllib.request` module. As you can see from these first three lines, one of Python's advantages is the large number of included standard libraries and available 3<sup>rd</sup> party open-source libraries.\n",
+    "* Line 3 allows us to use the `request` module from the `urllib` package.  A package is a just a group of related modules. As you can see from these first three lines, one of Python's advantages is the large number of included standard libraries and available 3<sup>rd</sup> party open-source libraries.\n",
     "* Line 5 prints a message to the console telling the user what the program will do\n",
     "* Line 6 allows the user to type in the URL for a particular website.  For this example, I used `http://irishwildcat.com`, an old blog no longer available on the Internet.\n",
     "* Line 7 gets a date in a particular format, starting with the year, month, and day.  This representation is based upon an international standard - [ISO-8601](https://en.wikipedia.org/wiki/ISO_8601) - for dates and times.\n",
     "* Line 8 creates a variable called `url` to point to a location on Wayback Machine at https://archive.org/\n",
-    "* Line 9 opens a connection to that url on archive.org and places the result into the variable `response`\n",
+    "* Line 9 opens a connection to that url on archive.org and places the result into the variable `response`.  It performs this by calling the `urlopen()` function within the `request` module.\n",
     "* Line 10 then reads the text output from that connection, setting the output into the variable `contents`\n",
     "* Line 11 converts the contents of the text variable (which contains a JSON object) to a Python dictionary.  A dictionary stores data in key-value pairs - we discuss this in much greater detail in a later notebook.\n",
     "* In lines 12-18, we execute a code block in a special region.  If a Python error occurs, the interpreter will detect the error and show the user the message in line 18.\n",
@@ -280,7 +304,9 @@
    "id": "259bbe35",
    "metadata": {},
    "source": [
-    "Yes, the output is rather messy.  Part of the challenge with scraping websites is to figure out what to keep and how to combine the results effectively. With a text analysis task such as this, researchers look to see how we can effectively extract the relevant text and then find meaning in that text. "
+    "Yes, the output is rather messy.  Part of the challenge with scraping websites is to figure out what to keep and how to combine the results effectively. With a text analysis task such as this, researchers look to see how we can effectively extract the relevant text and then find meaning in that text. \n",
+    "\n",
+    "Again, many different things occur in the previous text book.  Do not worry if it all does not make sense.  Part of these two code samples is to show you possible destinations on this coding journey that you have just started."
    ]
   },
   {
@@ -352,6 +378,7 @@
     "2. Each of the programs had some sort of output (result). \n",
     "3. All three had some form of sequence of commands with assignments, mathematical operations, or other statements.\n",
     "4. Each program used variables to hold information containing the current state of the program.\n",
+    "5. Each program used existing libraries and functions to produce the desired functionality. One aspect of modern programming is not only learning the syntax (the rules) of a programming language, but learning how to find and use existing libraries. \n",
     "\n",
     "Additionally, as these notebooks will demonstrate, programs typically contain some form of conditional expression that determines if different blocks of code should execute. Finally, the last fundamental commonality is that programs will regularly have some form of repetition where an action (or sequence of actions) will repeated."
    ]
