--- a/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
+++ b/IntroductionToPython/02-Types,Values,Variables,Names.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9da29614-ae27-4326-8e99-61aa95666451",
    "metadata": {},
@@ -101,7 +100,7 @@
    "source": [
     "## Variables\n",
     "\n",
-    "A variable is a name that refers to a value (i.e., an object). Think of variables as a place to store data in the computer's memory.\n",
+    "A variable is a name that refers to a value (i.e., an object). While you can think of variables as a place to store data in the computer's memory, more accurately, in Python, variables are basically names (labels) attached to objects.\n",
     "\n",
     "This code block declares three variables:"
    ]
@@ -123,12 +122,12 @@
    "id": "2b7d0e1b-e06a-4597-a6fa-5156b59a9eee",
    "metadata": {},
    "source": [
-    "`x` holds an integer value, `pi` holds a floating-point value, and `message` holds a text string.  The equals sign (`=`) specifies an _assignment statement_. Programmers read these statements as\n",
-    "- set `x` to the integer 6\n",
-    "- set `p` to the float 3.14159\n",
-    "- set `message` to the string \"Hello World!\"\n",
+    "`x` refers to an integer object, `pi` refers to a floating-point object, and `message` refers to a string(text) object.  The equals sign (`=`) specifies an _assignment statement_. Programmers read these statements as\n",
+    "- Set `x` to the integer 6\n",
+    "- Set `p` to the float 3.14159\n",
+    "- Set `message` to the string \"Hello World!\"\n",
     "\n",
-    "Those above statements created three variables - `x`, `pi`, and `message` - and assigned to them the value on the right side of the statement. These values on the right-hand side are objects of their respective types (int, float, and string)\n",
+    "Those above statements created three variables - `x`, `pi`, and `message` - and assigned to them a reference to the value on the right side of the statement. Those values on the right-hand side are objects of their respective types (int, float, and string)\n",
     "\n",
     "Unlike equations in algebra or other advanced mathematics, programming languages typically cannot solve an assignment statement, even though they may appear capable. Instead, the interpreter evaluates the right side of the ~~equals sign~~assignment operator and then assigns the result to a variable on the left side of the assignment operator.\n",
     "\n",
@@ -320,7 +319,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "14363b83",
    "metadata": {},
