--- a/IntroductionToPython/17-Validation,ExceptionsAndErrorHandling.ipynb
+++ b/IntroductionToPython/17-Validation,ExceptionsAndErrorHandling.ipynb
@@ -219,7 +219,7 @@
    "id": "7508e11d",
    "metadata": {},
    "source": [
-    "Another possibility covered in a later notebook is to use a regular expression. Through powerful notational grammar, regular expressions can find simple and complex text patterns.\n",
+    "Another possibility covered in a later notebook is to use a regular expression. Through a powerful notational grammar, regular expressions can find simple and complex text patterns.\n",
     "\n",
     "For this situation (to test if a string represents an integer), we will use the regular expression `^[-+]?[\\d]+$`. The expression works as follows:\n",
     "- `^` means to match the start of the string\n",
