--- a/IntroductionToPython/20-Testing.ipynb
+++ b/IntroductionToPython/20-Testing.ipynb
@@ -410,7 +410,10 @@
    "id": "1ef4ce91",
    "metadata": {},
    "source": [
-    "## Black Box vs White Box Testing"
+    "## Black Box vs White Box Testing\n",
+    "\n",
+    "As we approach functional testing, we can develop test cases based upon two approaches: black box and white box. \n",
+    "In the black box approach, we do not have any access to the underlying source code - we need to consider the test cases solely based upon the inputs and then the corresponding outputs. In contrast, the white box approach assumes that the test developers can see the code and then develop code specific to test paths, conditions, and branches that the code can possibly follow.  For unit testing, developers will combine both of these approaches in developing test cases.  For user acceptance testing, test cases follow a black-box approach as the users/testers do not have insight into the underlying pinnings as to how a system works.\n"
    ]
   },
   {
@@ -425,14 +428,6 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "71093c6f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "2f40bbc1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -453,6 +448,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ef2a57a4",
+   "metadata": {},
+   "source": [
+    "Equivalence classes: stock symbols - need to be between 1 and 5 characters in length: 0, 3, 7\n",
+    "         3 states of elements/substances: solid, liquid, gas   (based upon pressure and temperature)\n",
+    "         US zip codes: 5 digits in length.  partitions: < 5 (invalid). 5 (valid), > 5 (invalid)\n",
+    "         US tax brackets: \n",
+    "            Not over $10,275\t10% of the taxable income\n",
+    "            Over $10,275 but $41,775\t$1,027.50 plus 12% of the excess over $10,275\n",
+    "            Over $41,775 but not over $89,075\t$4,807.50 plus 22% of the excess over $41,775\n",
+    "            Over $89,075 but not over $170,050\t$15,213.50 plus 24% of the excess over $89,075\n",
+    "            Over $170,050 but not over $215,950\t$34,647.50 plus 32% of the the excess over $170,050\n",
+    "            Over $215,950 but not over $539,900\t$49,335.50 plus 35% of the excess over $215,950\n",
+    "            Over $539,900\t$162,718 plus 37% of the excess over $539,900"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "839a012b",
+   "metadata": {},
+   "source": [
+    "Guidelines for Equivalence Partitioning : \n",
+    "\n",
+    "If the range condition is given as an input, then one valid and two invalid equivalence classes are defined. \n",
+    "If a specific value is given as input, then one valid and two invalid equivalence classes are defined. \n",
+    "If a member of set is given as an input, then one valid and one invalid equivalence class is defined. \n",
+    "If Boolean no. is given as an input condition, then one valid and one invalid equivalence class is defined. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b06b3cc9",
    "metadata": {},
    "source": [
@@ -461,6 +487,15 @@
     "Want to test program boundaries and values to either side of the boundary\n",
     "\n",
     "(smallest, largest, change from negative to positive)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bba9eb4",
+   "metadata": {},
+   "source": [
+    "Boundary: \n",
+    "    age between 18 and 65:  17, 18, 19, 64,65,66"
    ]
   },
   {
