--- a/IntroductionToPython/34-DateTime.ipynb
+++ b/IntroductionToPython/34-DateTime.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5c6ae3ad",
    "metadata": {},
    "outputs": [],
@@ -270,18 +270,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1a4d006b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-07-08 02:53:10.708352+00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "utc = dt.datetime.now(dt.timezone.utc)\n",
     "print(utc)"
@@ -357,20 +349,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5567e682",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "difference = 32 days, 1:14:20\n",
-      "Tomorrow:  2022-07-19 00:08:57.266988+00:00\n",
-      "Tomorrow:  2022-07-19 00:08:57.267030+00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t4 = dt.datetime(year = 2019, month = 7, day = 12, hour = 7, minute = 9, second = 33)\n",
     "t5 = dt.datetime(year = 2019, month = 6, day = 10, hour = 5, minute = 55, second = 13)\n",
@@ -394,18 +376,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ec0f4a6c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "07/18/2022, 00:10:43 UTC\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "utcnow = dt.datetime.utcnow().replace(tzinfo=dt.timezone.utc)\n",
     "print(utcnow.strftime(\"%m/%d/%Y, %H:%M:%S %Z\"))"
@@ -537,18 +511,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "94c60a8f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-07-01 12:20:04 None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "str = '07/01/2022, 12:20:04 UTC'\n",
     "mydate = dt.datetime.strptime(str,\"%m/%d/%Y, %H:%M:%S %Z\")\n",
@@ -564,6 +530,22 @@
     "Several other developers and groups have written alternate libraries for datetime functionality within Python\n",
     "\n",
     "[Pendulum](https://pendulum.eustace.io/) is a drop-in replacement for the datetime library. Besides a cleaner API, the Pendulum library creates timezone-aware objects by default."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0def7571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tests to see if we are running in the Google Colaboratory environment\n",
+    "# If so, ensure pendulum is installed\n",
+    "try:\n",
+    "  import google.colab\n",
+    "  %pip install pendulum\n",
+    "except:\n",
+    "  pass"
    ]
   },
   {
