--- a/IntroductionToPython/07-Strings.ipynb
+++ b/IntroductionToPython/07-Strings.ipynb
@@ -135,7 +135,7 @@
    "id": "143d45ec",
    "metadata": {},
    "source": [
-    "Common escape sequences:\n",
+    "Common escape sequences:  ([View a more extensive table](https://web.archive.org/web/20220407023205/https://linuxconfig.org/list-of-python-escape-sequence-characters-with-examples))\n",
     "\n",
     "|Escape<br>Sequence|Result|\n",
     "|:----|:---|\n",
@@ -154,6 +154,25 @@
    "outputs": [],
    "source": [
     "print(\"It was the best of times,\\nit was the worst of times,\\nit was the age of wisdom,\\nit was the age of foolishness...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d73eff21",
+   "metadata": {},
+   "source": [
+    "If you need to include a `\\` in a string, rather than using an escape sequence, you can use a _raw_ string.  Specify a raw string in Python by prefixing a string value with an `r` or `R`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c77e082",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(r\"\\\\Here is a\\nraw string\")\n",
+    "print(R\"and\\tanother\\\\\")    # r\"and\\tanother\\\" does not work as the tokenizer first converts \\\" to a double quote."
    ]
   },
   {
