--- a/IntroductionToPython/11-Iteration.ipynb
+++ b/IntroductionToPython/11-Iteration.ipynb
@@ -852,7 +852,7 @@
    "source": [
     "returns_sorted= sorted(results)\n",
     "\n",
-    "median = returns_sorted[len(returns_sorted)//2] if len(returns_sorted)%2 == 1 else (returns_sorted[len(returns_sorted)//2] + returns_sorted[1 +len(returns_sorted)//2])/2\n",
+    "median = returns_sorted[len(returns_sorted)//2] if len(returns_sorted)%2 == 1 else (returns_sorted[len(returns_sorted)//2 -1] + returns_sorted[len(returns_sorted)//2])/2\n",
     "print(median)"
    ]
   },
