--- a/IntroductionToPython/15-Files.ipynb
+++ b/IntroductionToPython/15-Files.ipynb
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "76452f61",
    "metadata": {},
    "outputs": [],
@@ -534,27 +534,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8c6c6b28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean(average): 7.029416058394162\n",
-      "Median: 7.01\n",
-      "Min: -52.67\n",
-      "Max: 81.66\n",
-      "Range: 134.32999999999998\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "returns_sorted = sorted(returns)\n",
     "total = sum(returns)\n",
     "mean  = total / len(returns)\n",
-    "median = returns_sorted[len(returns)//2] if len(returns_sorted)%2 == 1 else (returns_sorted[len(returns)//2] + returns_sorted[1 +len(returns)//2])/2\n",
+    "median = returns_sorted[len(returns)//2] if len(returns_sorted)%2 == 1 else (returns_sorted[len(returns)//2 -1 ] + returns_sorted[len(returns)//2])/2\n",
     "print (\"Mean(average):\",mean)\n",
     "print (\"Median:\",median)\n",
     "print (\"Min:\", returns_sorted[0])\n",
@@ -564,19 +552,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3d14de93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Population Variance: 409.51651936704127\n",
-      "Population Standard Deviation: 20.236514506382793\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dif = 0\n",
     "for x in returns:\n",
@@ -598,19 +577,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "99c72a31",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best year: 1915\n",
-      "Worst year: 1931\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_year_index = returns.index(returns_sorted[-1])\n",
     "print(\"Best year:\", years[max_year_index])\n",
