--- a/IntroductionToPython/18-Modules.ipynb
+++ b/IntroductionToPython/18-Modules.ipynb
@@ -288,7 +288,7 @@
     "    \"\"\"Finds the median value of the list\"\"\"\n",
     "    if l:\n",
     "        s_list = sorted(l)\n",
-    "        return s_list[len(s_list)//2] if len(s_list)%2 == 1 else (s_list[len(s_list)//2] +s_list[1 +len(s_list)//2])/2\n",
+    "        return s_list[len(s_list)//2] if len(s_list)%2 == 1 else (s_list[len(s_list)//2 - 1] +s_list[len(s_list)//2])/2\n",
     "    else:\n",
     "        raise ValueError(\"list empty\")\n",
     "    \n",
